--- a/LastPlanet Shared/Scenes/SceneConfiguration.plist
+++ b/LastPlanet Shared/Scenes/SceneConfiguration.plist
@@ -4,7 +4,7 @@
 <array>
 	<dict>
 		<key>sceneType</key>
-		<string>HomeEndScene</string>
+		<string>GameScene</string>
 		<key>fileName</key>
 		<string>HomeScene</string>
 	</dict>
